--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+/* Add this to your global CSS */
+html,
+body {
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
+* {
+    box-sizing: border-box;
+}
